--- a/image segmentation.ipynb
+++ b/image segmentation.ipynb
@@ -70,7 +70,7 @@
         "plt.show()\n",
         "\n",
         "# Step 6: Dilation for Word Segmentation\n",
-        "kernel_word = np.ones((1, 20), np.uint8)  # Fixed: word kernel\n",
+        "kernel_word = np.ones((1, 20), np.uint8)\n",
         "dilated_words = cv2.dilate(thresh_img, kernel_word, iterations=1)\n",
         "plt.imshow(dilated_words, cmap='gray')\n",
         "plt.title('Dilation for Word Segmentation')\n",
